--- a/style.css
+++ b/style.css
@@ -268,15 +268,6 @@ h5 {
     width: 100%;
 }
 
-.flash {
-    width: 32px;
-    height: 32px;
-}
-
-.flash:hover {
-    cursor: pointer;
-}
-
 .eclipse {
     position: absolute;
     right: 0px;
@@ -296,6 +287,27 @@ h5 {
 }
 
 footer {
-    width: 100%;
     height: 32px;
+}
+
+.flash {
+    width: 64px;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+}
+
+.flash:hover {
+    cursor: pointer;
+}
+
+.flash img {
+    width: 32px;
+    height: 32px;
+    animation: flash 0.8s infinite;
+}
+
+@keyframes flash {
+    0% {margin-top: 0;}
+    100% {margin-top: 10px;}
 }
